# unpac

./: .unpac-audit.json  B0.ml  CHANGES.md  README.md  claude.opam  dune  dune-project  opam  tomlt-jsont.opam  tomlt.opam  unpac-claude.opam  unpac-opam.opam  unpac.opam  unpac.toml
.github/workflows/: build.yml
.tangled/workflows/: build.yml
lib/: audit.ml  audit.mli  backend.ml  claude.ml  claude.mli  client.ml  client.mli  config.ml  config.mli  content_block.ml  content_block.mli  control.ml  control.mli  dune  err.ml  err.mli  git.ml  git.mli  git_backend.ml  git_backend.mli  git_repo_lookup.ml  hooks.ml  hooks.mli  incoming.ml  init.ml  init.mli  mcp_server.ml  message.ml  message.mli  model.ml  model.mli  monorepo.ml  monorepo.mli  options.ml  options.mli  permissions.ml  permissions.mli  promote.ml  promote.mli  sdk_control.ml  (+20 more)
lib/claude/: agent.ml  agent.mli  dune  event.ml  event.mli  prompt.ml  prompt.mli  tools.ml  tools.mli  unpac_claude.ml  web.ml  web.mli
lib/opam/: dune  opam.ml  opam.mli  opam_file.ml  opam_file.mli  repo.ml  repo.mli  solver.ml  solver.mli
lib_bytesrw/: dune  tomlt_bytesrw.ml  tomlt_bytesrw.mli
lib_eio/: dune  tomlt_eio.ml  tomlt_eio.mli
lib_jsont/: dune  tomlt_jsont.mli
lib_unix/: dune  tomlt_unix.ml  tomlt_unix.mli
proto/: content_block.mli  control.mli  dune  hooks.ml  hooks.mli  incoming.ml  incoming.mli  message.ml  message.ml.bak  message.mli  model.mli  options.mli  permissions.mli  unknown.ml
test/: advanced_config_demo.ml  camel_jokes.ml  discovery_demo.ml  dune  dynamic_control_demo.ml  hooks_example.ml  permission_demo.ml  simple_permission_test.ml  simulated_permissions.ml  structured_output_simple.ml  test_codec.ml  test_debug.ml  test_incoming.ml  test_json_utils.ml  test_permissions.ml  test_tomlt.ml
test_jsont/: test_tomlt_jsont.ml
